# vsce-downloads

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  setup.py  test.py
vsce_downloads/: __init__.py  cli.py  core.py
